@@ -60,6 +60,7 @@ fitMeta,
 fitFeatureModel,
 fitLogNormal,
 fitPA,
+fitMultipleTimeSeries,
 fitSSTimeSeries,
 fitTimeSeries,
 fitZig,
@@ -95,6 +96,7 @@ ssFit,
 ssIntervalCandidate,
 ssPerm,
 ssPermAnalysis,
+ts2MRexperiment,
 trapz,
 zigControl,
 newMRexperiment,
